--- a/BootcampASP/BootcampASP.csproj
+++ b/BootcampASP/BootcampASP.csproj
@@ -112,6 +112,7 @@
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\jquery-2.2.4.min.js" />
     <Content Include="Scripts\jquery.sweet-alert.custom.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
@@ -121,6 +122,7 @@
     <Content Include="Scripts\sweetalert-dev.js" />
     <Content Include="Scripts\sweetalert.min.js" />
     <Content Include="Scripts\SweetDelete.js" />
+    <Content Include="Scripts\TransactionMaster\TransactionScripts.js" />
     <Content Include="Web.config" />
     <Content Include="Views\Suppliers\Create.cshtml" />
     <Content Include="Views\Suppliers\Edit.cshtml" />
@@ -133,25 +135,20 @@
     <Compile Include="Context\MyContext.cs" />
     <Compile Include="Controllers\ItemsController.cs" />
     <Compile Include="Controllers\SuppliersController.cs" />
+    <Compile Include="Controllers\TransactionsController.cs" />
     <Compile Include="Core\BaseModel.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201902070255497_AddFirstModel.cs" />
-    <Compile Include="Migrations\201902070255497_AddFirstModel.Designer.cs">
-      <DependentUpon>201902070255497_AddFirstModel.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201902070746117_AddItemModel.cs" />
-    <Compile Include="Migrations\201902070746117_AddItemModel.Designer.cs">
-      <DependentUpon>201902070746117_AddItemModel.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201902080147247_Updatenot.cs" />
-    <Compile Include="Migrations\201902080147247_Updatenot.Designer.cs">
-      <DependentUpon>201902080147247_Updatenot.cs</DependentUpon>
+    <Compile Include="Migrations\201902110154509_AddTransactionsAndTransactionItems.cs" />
+    <Compile Include="Migrations\201902110154509_AddTransactionsAndTransactionItems.Designer.cs">
+      <DependentUpon>201902110154509_AddTransactionsAndTransactionItems.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Item.cs" />
     <Compile Include="Models\Supplier.cs" />
+    <Compile Include="Models\Transaction.cs" />
+    <Compile Include="Models\TransactionItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\ItemVM.cs" />
   </ItemGroup>
@@ -163,6 +160,7 @@
     <Content Include="Views\Suppliers\Index.cshtml" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
     <Content Include="Views\Items\Edit.cshtml" />
+    <Content Include="Views\Transactions\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -174,14 +172,8 @@
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201902070255497_AddFirstModel.resx">
-      <DependentUpon>201902070255497_AddFirstModel.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201902070746117_AddItemModel.resx">
-      <DependentUpon>201902070746117_AddItemModel.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201902080147247_Updatenot.resx">
-      <DependentUpon>201902080147247_Updatenot.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201902110154509_AddTransactionsAndTransactionItems.resx">
+      <DependentUpon>201902110154509_AddTransactionsAndTransactionItems.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
